<resources>
    <string name="app_name">Muvi</string>
    <string name="movie_button">Movie</string>
    <string name="tv_button">Tv</string>
    <string name="search_field">Search</string>
    <string name="login_button">Log In</string>
    <string name="logout_button">Log Out</string>
    <string name="my_lists">Lists</string>
    <string name="favorites">Favorites</string>
    <string name="movies">Movies</string>
    <string name="tvs">Tv Series</string>
    <string name="tv_episodes">Tv Episodes</string>
    <string name="ratings">Ratings</string>
    <string name="watchlist">Watchlist</string>
    <string name="create_new_list">Create New List</string>
    <string name="add_to_list">Add To List</string>
    <string name="description">Description (optional)</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="mark_as_favorite">Mark As Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="add_to_watchlist">Add To Watchlist</string>
    <string name="remove_from_watchlist">Remove From Watchlist</string>
    <string name="trending">Trending</string>
    <string name="featured_today">Featured Today</string>
    <string name="home">Home</string>
    <string name="you">You</string>
    <string name="undo">UNDO</string>
    <string name="rate_this">Rate this</string>
    <string name="cast">Cast</string>
    <string name="director">Director: %s</string>
    <string name="writer">Writer: %s</string>
    <string name="more_like_this">More like this</string>
    <string name="videos">Videos</string>
    <string name="vote">%s/10</string>
    <string name="photos">Photos</string>
    <string name="movie_photos">Movie Photos</string>
    <string name="see_all">SEE ALL</string>
    <string name="title">%s photos</string>
    <string name="details">Details</string>
    <string name="release_date">Release Date</string>
    <string name="origin_country">Country Of Origin</string>
    <string name="language_spoken">Language Spoken</string>
    <string name="filming_locations">Filming Locations</string>
    <string name="tv_series">Tv Series</string>
    <string name="tv_series_finished_date_range">%s-%s</string>
    <string name="tv_series_in_production_date_range">%s-</string>
    <string name="episode_guide">EPISODE GUIDE</string>
    <string name="count_of_episodes">%s episodes</string>
    <string name="filmography">Filmography</string>
    <string name="born">Born: %s</string>
    <string name="died">Died: %s</string>
    <string name="seasons">Seasons</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="upcoming">Upcoming</string>
    <string name="please_log_in">Please log in to see your Watchlists, Favorites, etc…</string>
    <string name="dont_have_favorites">You don\'t have any favorites yet</string>
    <string name="no_episodes">There is no episodes yet</string>
    <string name="list_is_empty">List is empty, add something</string>
    <string name="no_lists">There is no lists yet</string>
    <string name="remove">Remove</string>
    <string name="aged">(aged %s)</string>
    <string name="poster">poster</string>
    <string name="rating_bar">rating bar</string>
    <string name="rate">Rate</string>
    <string name="rating_star">rating star</string>
    <string name="dark_theme_button">Dark theme button</string>
    <string name="your_rating">%s\n(your rating)</string>
    <string name="preview_trailer_image">Preview trailer image</string>
    <string name="photo_of_person">photo of person</string>
</resources>