<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_rated_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rated.RatedFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_rated_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rated_movies" />

    <Button
        android:id="@+id/button_rated_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/movies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_rated_tvs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tvs"
        app:layout_constraintStart_toEndOf="@+id/button_rated_movies"
        app:layout_constraintTop_toTopOf="@+id/button_rated_movies" />

    <Button
        android:id="@+id/button_rated_tv_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_episodes"
        app:layout_constraintStart_toEndOf="@+id/button_rated_tvs"
        app:layout_constraintTop_toTopOf="@+id/button_rated_tvs" />
</androidx.constraintlayout.widget.ConstraintLayout>