<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".you.YouFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/watchlist_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/watchlist_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchlists"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/lists_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/watchlist_card_view"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/lists_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_lists"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/favorites_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/lists_card_view"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/favorites_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rated_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/favorites_card_view"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/rated_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rated_card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>